vendor/structopt-0.3.21/tests/ui/subcommand_and_parse.stderr
error: parse attribute is not allowed for subcommand
  --> $DIR/subcommand_and_parse.rs:17:29
   |
17 |     #[structopt(subcommand, parse(from_occurrences))]
   |                             ^^^^^
